# flappy_bird

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  clean.sh  flappy_bird  freshbuildrun.sh  make.sh  makerun.sh  run.sh  sonar-project.properties
.github/workflows/: cmake.yml  itch.yml  makefile.yml  sfml.yml  sonarcloud.yml
cpp/: Makefile
cpp/src/: AssetManager.cpp  Definitions.h  Game.cpp  GameState.cpp  InputManager.cpp  InputManager.h  Land.cpp  MenuState.cpp  MenuState.h  Pipe.cpp  Pipe.h  SplashState.h  State.h  StateMachine.cpp  StateMachine.h  main.cpp
src/: AssetManager.h  Game.h  GameOverState.cpp  GameOverState.h  GameState.cpp  GameState.h  InputManager.h  Land.h  Pipe.cpp  Pipe.h  SplashState.cpp  StateMachine.h  main.cpp
src/AssetManager/: AssetManager.cpp  AssetManager.h  CMakeLists.txt
src/Bird/: Bird.cpp  Bird.h  CMakeLists.txt
src/Collision/: CMakeLists.txt  Collision.cpp  Collision.h
src/Collission/: Collission.cpp  Collission.h
src/Flash/: CMakeLists.txt  Flash.cpp  Flash.h
src/GameLoop/: CMakeLists.txt  Game.cpp  Game.h
src/GameOverState/: CMakeLists.txt  GameOverState.cpp  GameOverState.h
src/GameState/: CMakeLists.txt  GameState.cpp  GameState.h
src/HUD/: CMakeLists.txt  HUD.cpp  HUD.h
src/InputManager/: CMakeLists.txt  InputManager.cpp  InputManager.h
src/Land/: CMakeLists.txt  Land.cpp  Land.h
src/Main/: CMakeLists.txt  main.cpp
src/MenuState/: CMakeLists.txt  MenuState.cpp  MenuState.h
src/Pipe/: CMakeLists.txt  Pipe.cpp  Pipe.h
src/SplashState/: CMakeLists.txt  SplashState.cpp  SplashState.h
src/StateMachine/: CMakeLists.txt  StateMachine.cpp  StateMachine.h
src/Utils/: CMakeLists.txt  Clamp.h  Definitions.h  RandomEngine.h  State.h  Utils.cpp
src/include/SFML/: Graphics.hpp
